tests/models/snapshots/animals/can_find_by_id@animals.snap
---
source: tests/models/animals.rs
assertion_line: 88
expression: result
---
Ok(
    AnimalCleaned {
        id: 101,
        pid: b2bd6270-8bec-42ce-99ff-d0eb1a076221,
        organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
        organisation_name: "Acme Corp",
        tag_id: "AC001",
        name: "Daisy",
        specie_name: "cattle",
        breed_name: "Jersey",
        date_of_birth: Some(
            2023-05-15,
        ),
        gender: "female",
        parent_female_name: None,
        parent_female_tag_id: None,
        parent_male_name: None,
        parent_male_tag_id: None,
        status: "active",
        purchase_date: Some(
            2023-06-20,
        ),
        purchase_price: Some(
            45000.00,
        ),
        weight_at_birth: Some(
            28.50,
        ),
        current_weight: Some(
            375.25,
        ),
        notes: Some(
            "Excellent milk producer, calm temperament",
        ),
        created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
        created_by_name: "John Doe",
        created_at: 2024-06-21T10:15:00+00:00,
        updated_at: 2024-12-15T14:30:00+00:00,
    },
)
