tests/models/snapshots/animals/can_find_by_id_wrong_id@animals.snap
---
source: tests/models/animals.rs
assertion_line: 56
expression: result
---
Err(
    EntityNotFound,
)
