tests/models/snapshots/animals/can_find_by_tag_id@animals.snap
---
source: tests/models/animals.rs
assertion_line: 256
expression: result
---
Ok(
    AnimalResponse {
        id: 103,
        pid: d909e761-36da-4062-ae78-abba4f7c1103,
        organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
        organisation_name: "Acme Corp",
        tag_id: "AC003",
        name: "Ferdinand",
        specie_name: "cattle",
        breed_name: "Jersey",
        date_of_birth: Some(
            2022-08-20,
        ),
        gender: "male",
        parent_female_name: None,
        parent_female_tag_id: None,
        parent_female_id: None,
        parent_male_name: None,
        parent_male_tag_id: None,
        parent_male_id: None,
        status: "active",
        purchase_date: Some(
            2022-10-05,
        ),
        purchase_price: Some(
            65000.00,
        ),
        weight_at_birth: Some(
            32.25,
        ),
        current_weight: Some(
            625.75,
        ),
        notes: Some(
            "Breeding bull, excellent lineage",
        ),
        created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
        created_by_name: "John Doe",
        created_at: 2024-10-06T08:45:00+00:00,
        updated_at: 2024-12-10T11:30:00+00:00,
    },
)
