tests/models/snapshots/animals/can_update_one@animals.snap
---
source: tests/models/animals.rs
assertion_line: 211
expression: result
---
Ok(
    Animal {
        id: 101,
        pid: b2bd6270-8bec-42ce-99ff-d0eb1a076221,
        organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
        tag_id: "AC001",
        name: "Gertrude",
        specie_id: 1,
        breed_id: 4,
        date_of_birth: Some(
            DATE,
        ),
        gender: "female",
        parent_female_id: None,
        parent_male_id: None,
        status: "active",
        purchase_date: Some(
            DATE,
        ),
        purchase_price: Some(
            45000.00,
        ),
        weight_at_birth: Some(
            28.50,
        ),
        current_weight: Some(
            610.00,
        ),
        notes: Some(
            "Excellent milk producer, calm temperament",
        ),
        created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
        created_at: DATE,
        updated_at: DATE,
    },
)
